--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node app"
   },
   "engines": {
-    "node": "0.6.x"
+    "node": "~0.8.7"
   },
   "dependencies": {
     "express": "3.0.0rc4",
