--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "node app"
   },
   "engines": {
-    "node": "~0.8.7"
+    "node": "0.8.7",
+    "npm": "1.1.53"
   },
   "dependencies": {
     "express": "3.0.0rc4",
