--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "start": "node app"
   },
   "engines": {
-    "node": "0.8.7",
-    "npm": "1.1.53"
+    "node": "0.8.7"
   },
   "dependencies": {
     "express": "3.0.0rc4",
