--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node server"
   },
   "engines": {
-    "node": "0.8.x"
+    "node": "0.8.4"
   },
   "dependencies": {
     "express": "3.0.0rc4",
