--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "node server"
   },
   "engines": {
-    "node": "0.8.4"
+    "node": "0.8.x",
+    "npm": "1.1.x"
   },
   "dependencies": {
     "express": "3.0.0rc4",
