--- a/locals/bands.yml
+++ b/locals/bands.yml
@@ -1,3 +1,9 @@
+alvaro_ruiz:
+  name: Alvaro Ruiz
+  text: |
+    Artista multidisciplinario, músico, artista sonoro y de música electronica experimental. Ha invertido la mayoría de su tiempo e ingresos en la invesigación y producción de música electrónica por medios analógicos y digitales, siendo, en el final de los 90s,  uno de los pioneros en la producción de música electrónica “popular” en México. Así, los proyectos que ha generado han llamado la atención del público especializado en México y otras partes del Mundo. Sus proyectos “ Balboa”, “Ruisort” y “Algorythm & Blues” son representativos de la música electronica del país. 
+    Este año compuso y produjo el score para la película de cine mudo “Nosferatu, el vampiro” de Murnau, con un ensamble formado por María Lipkau al cello, Gustavo Jacob a la guitarra y sintetizadores y él mismo al piano, theremin, voz y procesos en tiempo real, presentándose de forma exitosa en la Cineteca Nacional. Actulamente realiza el performance “Diálogos con la última zanahoria” basado en el poema “Get the nose” de Charles Bukowski, donde explora las posibilidades del theremin, la voz y los procesos digitales desde la estética del Noise.
+
 batwings:
   name: Batwings
   text: |
@@ -7,17 +13,9 @@ batwings:
 belafonte:
   name: Belafonte
   text: |
-    Proyecto de Noise Pop Instrumental de Tijuana,
-     México formado por Mónica Muñoz (Bajo) , Julio Pillado
-     (Bateria) y Mario Supereit (Guitarras & Moog). El grupo
-     se forma en el 2001 a la par de otros proyectos que aún
-     siguen vigentes dentro de la escena local. Su estilo es 
-     completamente instrumental. Toman influencias de grupos
-     noventeros como My Bloody Valentine y de Los Planetas, 
-     mezclando elementos melodicos y ruidosos dentro de sus 
-     composiciones. Después de casi 8 años de no tocar en vivo, 
-     se reunen para tocar dentro de la tercera edición del festival 
-     All My Friends.
+    Proyecto de Noise Pop Instrumental de Tijuana, México formado por Mónica Muñoz (Bajo) , Julio Pillado (Bateria) y Mario Supereit (Guitarras & Moog). El grupo se forma en el 2001 a la par de otros proyectos que aún siguen vigentes dentro de la escena local. Su estilo es 
+    completamente instrumental. Toman influencias de grupos noventeros como My Bloody Valentine y de Los Planetas,  mezclando elementos melodicos y ruidosos dentro de sus composiciones. Después de casi 8 años de no tocar en vivo, 
+    se reunen para tocar dentro de la tercera edición del festival All My Friends.
      
 bruno_dario:
   name: Bruno Dario y las Otras Dimensiones
@@ -34,23 +32,38 @@ calafia_puta:
   text: |
     Banda de powerviolence, hard core que nace en la ciudad de tijuana en el 2008,iniciando con una gira por México con Biocrisis y al poco tiempo después sacando un demos, en el 2012 graban de nuevo para sacar el 3er disco para después hacer un split con Corrupt Bastards una banda nueva de powerviolence de texas, que fue hecho en cassetes por DIY NOISE.
 
+chelsea_wolfe:
+  name: Chelsea Wolfe
+  text: |
+    Nativa del estado de California en Estados Unidos, Chelsea Wolfe siempre se ha caracterizado por la luz y oscuridad dentro de su música. Son pocas las bandas que pueden crear una atadura entre lo terrorífico y lo bello.  Chelsea Wolfe, encabeza el actual género de freak-folk en Estados Unidos. Es con la combinación de ambient, folk y psicodelia que genuinamente logra convocar misticismo de un mundo oscuro con personalidad propia.Apokalypsis, bajo el sello Pendu Sound Recordings, es la segunda entrega de Chelsea Wolfe. 
+
+dancing_strangers:
+  name: Dancing Strangers
+  text: |
+    Dancing Strangers el producto de la unión de varias ideas artísticas, Astronauta Jackson y Eric Curiel, influenciados por el post-punk, art-rock y kraut-rock, se unen con el propósito de experimentar con un sonido  más obscuro y minimal. En el 2011 lanzaron su segundo EP, titulado POWER.SEX.CORRUPTION. Actualmente se encuentran trabajando en su tercer EP, llamado "Lost In Lust".
+
 dda:
   name: DDA
   text: |
     Cuatro extremos de la ciudad se conocen y comienzan a tocar en un garage atrás de la Cervecería Modelo. 
     Gabo, Cadaver, Ramón y Sonny, forman el Déficit de Atención. Acid Surf que cada vez se acerca más al Noise. 
-    Marcados por los noventas, experimentan sobre lo aprendido. 
-    
+    Marcados por los noventas, experimentan sobre lo aprendido.
     
 dfmk:
   name: DFMK
   text: |
     A veces cuando andas bajo la influencia de alguna sustancia haces cosas que para muchos no tienen sentido, pero para ti si, cosas como hacer una banda y llamarla DFMK. Dirty and mean Rock n' Roll with punk rock Soul, southside del Rio Tijuana a.k.a Bad Town.
 
+fax:
+  name: Fax
+  text: |
+    Con más de 10 años  de carrera, es uno de los productores más prolíficos de música electrónica en México. Iniciando como guitarrista en los 90's, FAX giró del rock a la electrónica, debutando en 2002 con "Resonancia" (considerado como uno de los primeros discos de tecno minimal en México) y siendo al mismo tiempo siendo co-fundador del sello Static Discos de Tijuana.Su mas reciente álbum se titula "Circles" y ha sido editado por el sello francés SEM. 
+
 helado_negro:
   name: Helado Negro
   text: |
-    Hijo de padres Ecuatorianos, Roberto Carlos Lange mejor conocido como Helado Negro, nace en el estado de Florida en Estados Unidos. Músico y productor de varios proyectos, como ROM y Epstein, su sonido se caracteriza con tintes de su influencia latinoamericana y la experimentación de kraut electrónico con ritmos en down-tempo. Su arduo trabajo se ve reflejado en grandes pasos a través de su carrera. Ahora, Lange radica en Nueva York y desde su estudio personal en Brooklyn llega con su más reciente tesoro titulado Island Universe Story One. Y sigue sumando a su sorprendente y talentosa carrera,  este 2012, Lange junto a Julianna Barwick, nos entrega su nuevo proyecto musical llamado Ombre.
+    Hijo de padres Ecuatorianos, Roberto Carlos Lange mejor conocido como Helado Negro, nace en el estado de Florida en Estados Unidos. Músico y productor de varios proyectos, como ROM y Epstein, su sonido se caracteriza con tintes de su influencia latinoamericana y la experimentación de kraut electrónico con ritmos en down-tempo. 
+    Su arduo trabajo se ve reflejado en grandes pasos a través de su carrera. Ahora, Lange radica en Nueva York y desde su estudio personal en Brooklyn llega con su más reciente tesoro titulado Island Universe Story One. Y sigue sumando a su sorprendente y talentosa carrera,  este 2012, Lange junto a Julianna Barwick, nos entrega su nuevo proyecto musical llamado Ombre.
 
 inkjet:
   name: Inkjet
@@ -62,7 +75,6 @@ kry_lon:
   text: |
     KRY-LON  dos jóvenes, musicos y productores de House y Disco, orignarios de Tijuana, creciero escuchando  "cosas como DJ Shadow, New Order, Daft Punk, aunado a una visión cinematográfica"  Comenzaron a hacer beats, a los 14 años, pero empezaron con su carrera a los 17. KRY-LON ha trabajado recientemen en un sonido más lo-fi, con una mezcla de abstract disco, bouncy synth-funk y lo que suena como las gemas perdidas  de Mo' wax en un futuro alterno. 
     Se estarán presentando en vivo por primera vez en AMF12, actualmente se encuentran trabajando en su primer 12 inch con el sello Nervous Recordsd de New York.  
-    
 
 late_nite_howl:
   name: Late Nite Howl
@@ -75,14 +87,12 @@ le_ra:
     Le Ra es una banda indie/pop formada en San Diego  iniciaron su colaboracion musical con el grupo Under the Influence of Us en el 2007. Su sonido ha progresado con influencias desde el brit-pop  indie pop, rock en español, y jazz .El proyecto ha tenido varias salidas de su musica que incluyen Moving (EP) 2011 y Big Sky (EP) 2012.
     Actualmente Le Ra consiste de cuatro miembros; Monica Mendoza (voz, guitarra, piano), David Reyes (voz y bajo), Luis Hernandez (bacteria) y Luis Lopez (percusión)
     
-    
 lo_que_nunca_fue:
   name: Lo que nunca fué
   text: |
     En un principio el proyecto inicial era destinado a ser de género Folk o sonidos más acústicos. Pero en el primer ensayo salieron y se ensamblaron sonidos y influencias variadas desde Jazz, Rock clásico, Progresivo, Alternativo, sonidos latinos, entre otros.
     Desde un principio el crear piezas no fue un impedimento pues las ideas fluían de manera rápida.
     En el año de trayectoria el sonido propio se ha notado más y más y ha madurado.
-    
 
 lorelle_meets_the_obsolete:
   name: Lorelle Meets The Obsolete
@@ -93,6 +103,13 @@ lorelle_meets_the_obsolete:
     En mayo del 2011 revelaron On Welfare, primer largo en el que, a través de 38 minutos, invitan al escucha a caminar por una atmósfera densa de guitarras, drones y
     garage reminiscente del sonido de My Bloody Valentine y The Jesus and Mary Chain. On Welfare, con distribución en Estados Unidos, Reino Unido, Japón y Alemania, logró críticas positivas en medios. Además de aparecer en la rotación de estaciones de radio como WFMU de Nueva Jersey, KDVS de California y BBC Radio 6en Reino Unido.
 
+los_macuanos:
+  name: Los Macuanos
+  text: |
+    Música de frontera. Elástica, siniestra, invisible y violentada.
+    No se trata de folclor ni lugares comunes. Se trata de sofisticación, traducción y baile mexxicano.
+    Moisés Horta, Moisés López  y Reuben Torres forman LOS MACUANOS, ensamble de productores originario de Tijuana,Baja California.Sus producciones, aunque basadas en la tradición musical de su entorno, se encuentran influenciadas por una visión ampliada, un entendimiento nato de la pista y una buena dosis de mortífero humor conspiratorio.
+
 maniqui_lazer:
   name: Maniquí Lazer
   text: |
@@ -101,7 +118,8 @@ maniqui_lazer:
 maria_y_jose:
   name: María y José
   text: |
-    María y José es el proyecto de Tony Gallardo,  originario de San Juan de los Lagos,  Jalisco; pero que con el paso de los años se ha convertido en un hijo de Tijuana. María Y José se encuentra en una constante búsqueda de ritmos sagrados y paisajes sonoros tribales que lo han llevado a lanzar varios materiales como "Espíritu Invisible" y "Kibosé". Este año lanzará su primer material LP titulado "Rey de reyes" al cual estará formado por algunas re-ediciones de sencillos como "Granada" y "Rey de reyes", así como temas inéditos. La música de María Y José lo consolida como el nuevo líder juvenil y uno de los más importantes iconos del ruidosón.
+    María y José es el proyecto de Tony Gallardo,  originario de San Juan de los Lagos,  Jalisco; pero que con el paso de los años se ha convertido en un hijo de Tijuana. María Y José se encuentra en una constante búsqueda de ritmos sagrados y paisajes sonoros tribales que lo han llevado a lanzar varios materiales como "Espíritu Invisible" y "Kibosé". 
+    Este año lanzará su primer material LP titulado "Rey de reyes" al cual estará formado por algunas re-ediciones de sencillos como "Granada" y "Rey de reyes", así como temas inéditos. La música de María Y José lo consolida como el nuevo líder juvenil y uno de los más importantes iconos del ruidosón.
     
 matilda_manzana:
   name: Matilda Manzana
@@ -118,19 +136,20 @@ mock_the_zuma:
 orlando_and_the_shantelles:
   name: Orlando and the Shantelles
   text: |
-    Orlando es un cantautor tijuanense que ha trazado su camino como solista durante varios años. Poseedor de una voz que ha sido descrita como "melodiosa", "hipnotizante"; su música explora diversas vertientes estilísticas resultando en un estilo personal y prácticamente inclasificable.  En el 2010 lanzó su primer producción discográfica en forma, titulada "Capullo", que lo ha expuesto a nuevos públicos. Orlando and the Shantelles es el resultado del perfecto maridaje entre la música de Orlando y el sonido shoegaze de la banda tijuanense Shantelle, con quienes está trabajando actualmente en su próximo material discográfico.
+    Orlando es un cantautor tijuanense que ha trazado su camino como solista durante varios años. Poseedor de una voz que ha sido descrita como "melodiosa", "hipnotizante"; su música explora diversas vertientes estilísticas resultando en un estilo personal y prácticamente inclasificable.
+    En el 2010 lanzó su primer producción discográfica en forma, titulada "Capullo", que lo ha expuesto a nuevos públicos. Orlando and the Shantelles es el resultado del perfecto maridaje entre la música de Orlando y el sonido shoegaze de la banda tijuanense Shantelle, con quienes está trabajando actualmente en su próximo material discográfico.
     
 san_pedro_el_cortez:
   name: San Pedro el Cortez
   text: |
-    "Una de las bandas pioneras de la escena psy-guarro rock contemporánea de Tijuana es, sin duda alguna, San Pedro El Cortez. Acorde a su proceso musical completamente orientado hacia la experimentación sonora, combinado con la explosividad de su show y sonido en vivo, se perfilan como parte de la generación futurista de artistas de vanguardia en Baja California. Con un sinfín de influencias que van desde el garage rock clásico hasta lo más avant-garde, San Pedro El Cortez cantan y transmiten desde lo absurdo y lo caótico, hasta lo sucio de la vida diaria. San Pedro El Cortez: 'somos calle, somos gente.'" 
+    "Una de las bandas pioneras de la escena psy-guarro rock contemporánea de Tijuana es, sin duda alguna, San Pedro El Cortez. Acorde a su proceso musical completamente orientado hacia la experimentación sonora, combinado con la explosividad de su show y sonido en vivo, se perfilan como parte de la generación futurista de artistas de vanguardia en Baja California.
+    Con un sinfín de influencias que van desde el garage rock clásico hasta lo más avant-garde, San Pedro El Cortez cantan y transmiten desde lo absurdo y lo caótico, hasta lo sucio de la vida diaria. San Pedro El Cortez: 'somos calle, somos gente.'" 
     
 santos:
   name: Santos
   text: |
     Surgido en las orillas de la nueva Tijuana es un proyecto con beats poderosos creando una fusión perfecta entre el techno sabrosón con ritmos de cumbia
     Su primer disco,La Sombra de Satán es una de esas extrañezas que se alojan en la sombra de la infravaloración, pero que al paso del tiempo se convierte en una clásica escucha de verdaderos entusiastas del contexto.
-    
     
 tropical_popsicle:
   name: Tropical Popsicle
@@ -142,6 +161,10 @@ vampire_slayer:
   text: |
     VAMPIRE SLAYER es Valentin Torres (1981), músico autodidacta, que emerge de la band dance punk Maniqui Lazer. Inmediatamente después de la separación de Maniquí, este asesino de vampiros se aventura en su carrera como solista y desde entonces ha dirigido su arsenal digital y análogo a un terreno más personal, donde la noche, lo sexual, el blanco y negro, toman lugar. 
     
+via_aerea:
+  name: Via Aérea
+  text: |
+    Despues de varios cambios de alineación, la banda de culto, Vía Aérea hizo oficial su regreso, en marzo del presente. Para esta ocasión está integrada por  Rene  Soberanis, líder de Loopdrop, Raúl, Paco y Julio Selva, los son  considerados uno de los pilares más sólidos de la escena independiente de Tijuana.     
     
 yelram_selectah:
   name: Yelram Selectah
