Correct opengraph image path

--- a/locals/opengraph.yml
+++ b/locals/opengraph.yml
@@ -1,7 +1,7 @@
 title: All My Friends Music Festival
 type: website
 url: http://amfmf.com
-image: /img/amf.png
+image: http://amfmf.com/img/amf.png
 site_name: All My Friends Music Festival
 description: |
   ALL MY FRIENDS MUSIC FESTIVAL, el festival de música emergente más importante y relevante del Noroeste de México. 
