Hide play button for Alvaro Ruiz

--- a/locals/bands.yml
+++ b/locals/bands.yml
@@ -1,5 +1,6 @@
 alvaro_ruiz:
   name: Alvaro Ruiz
+  hide_play: true
   text: |
     Artista multidisciplinario, músico, artista sonoro y de música electrónica experimental. Ha invertido la mayoría de su tiempo e ingresos en la investigación y producción de música electrónica por medios análogos y digitales, siendo, a finales de los noventa, uno de los pioneros en la producción de música electrónica “popular” en nuestro país. Así, los proyectos que ha generado han llamado la atención del público especializado en México y otras partes del mundo. Sus proyectos Balboa, Ruisort y Algorythm & Blues son representativos de la música electrónica del país. Este año compuso y produjo el score para la película de cine mudo “Nosferatu, el vampiro” de Murnau, con un ensamble formado por María Lipkau al cello, Gustavo Jacob a la guitarra y sintetizadores, y él mismo al piano, theremín, voz y procesos en tiempo real, presentándose de forma exitosa en la Cineteca Nacional. Actualmente realiza el performance Diálogos Con La Última Zanahoria, basado en el poema “Get The Nose” de Charles Bukowski, donde explora las posibilidades del theremín, la voz y los procesos digitales desde la estética del noise.
     
