--- a/locals/colors.yml
+++ b/locals/colors.yml
@@ -1,24 +1,51 @@
-- "#f8de3c"
-- "#f9da68"
-- "#f9d682"
-- "#f8c682"
-- "#f4b37d"
-- "#f1a383"
-- "#f0a186"
-- "#ec8785"
-- "#ec7d91"
-- "#e86995"
-- "#e75d96"
-- "#e44c8a"
-- "#abd381"
-- "#b1d9a8"
-- "#9fd3ae"
-- "#88cdb3"
-- "#82cec5"
-- "#73cbd0"
-- "#6fcdde"
-- "#5ecae4"
-- "#5ac7e3"
-- "#54c4e2"
-- "#4dc0e0"
-- "#2eafd7"
+- "#f7cd33"
+- "#f7cd33"
+- "#f8e251"
+- "#f8e251"
+- "#f9e363"
+- "#f9e363"
+- "#f9d768"
+- "#f9d768"
+- "#f9d768"
+- "#f9ce87"
+- "#f9ce87"
+- "#f7c074"
+- "#f7c074"
+- "#f5bb90"
+- "#f5bb90"
+- "#f2a486"
+- "#f2a486"
+- "#f2a592"
+- "#f2a592"
+- "#ed8b85"
+- "#ed8b85"
+- "#eb7888"
+- "#eb7888"
+- "#e96384"
+- "#e96384"
+- "#e75c87"
+- "#e75c87"
+- "#e3477e"
+- "#e3477e"
+- "#a6cf6f"
+- "#a6cf6f"
+- "#b8dba0"
+- "#b8dba0"
+- "#b4daa5"
+- "#b4daa5"
+- "#a3d5ab"
+- "#a3d5ab"
+- "#83cec4"
+- "#83cec4"
+- "#7eced0"
+- "#7eced0"
+- "#55c4e2"
+- "#56c5e2"
+- "#3eb8dc"
+- "#3eb8dc"
+- "#3eb8dc"
+- "#3eb8dc"
+- "#3eb8dc"
+- "#3eb8dc"
+- "#3eb8dc"
+- "#3eb8dc"
