Fixed Lorelle ... text

--- a/locals/bands.yml
+++ b/locals/bands.yml
@@ -91,15 +91,19 @@ le_ra:
     Le Ra es una banda indiepop formada en San Diego. Iniciaron su colaboración musical con el grupo Under The Influence Of Us en el 2007. Su sonido ha progresado con influencias desde el brit-pop, indie pop, rock en español y jazz. El proyecto ha tenido varias salidas de su música que incluyen los EPs Moving en 2011 y Big Sky en 2012. Actualmente, Le Ra consiste de cuatro miembros: Mónica Mendoza (voz, guitarra, piano), David Reyes (voz y bajo), Luis Hernández (batería) y Luis López (percusión).
     
 lo_que_nunca_fue:
-  name: Lo que nunca fué
+  name: Lo que nunca fue
   text: |
     En un principio, el proyecto inicial era destinado a ser del género folk o de sonidos más acústicos. Pero, en el primer ensayo, salieron y se ensamblaron sonidos e influencias variadas desde jazz, rock clásico, progresivo, alternativo y sonidos latinos, entre otros. Desde un principio, el crear piezas no fue un impedimento, pues las ideas fluían de manera rápida. En el año de trayectoria, el sonido propio se ha notado más y más y ha madurado.
     
 lorelle_meets_the_obsolete:
   name: Lorelle Meets The Obsolete
   text: |
-    En un principio, el proyecto inicial era destinado a ser del género folk o de sonidos más acústicos. Pero, en el primer ensayo, salieron y se ensamblaron sonidos e influencias variadas desde jazz, rock clásico, progresivo, alternativo y sonidos latinos, entre otros. Desde un principio, el crear piezas no fue un impedimento, pues las ideas fluían de manera rápida. En el año de trayectoria, el sonido propio se ha notado más y más y ha madurado.
-    
+    Lorelle Meets The Obsolete es el novel dúo que nace de la complicidad de los tapatíos Lorena Quintanilla (Lorelle) y Alberto González (The Obsolete). No conformes con
+    el espectro logrado con sus demás creaciones (Soho Riots y Holy Mountains), se han aventurado a contribuir una vez más a la telaraña psiquedélica que grandes como
+    Sky Saxon, Rocky Erickson y Pete Kember han tejido.
+    En mayo del 2011 revelaron On Welfare, primer largo en el que, a través de 38 minutos, invitan al escucha a caminar por una atmósfera densa de guitarras, drones y
+    garage reminiscente del sonido de My Bloody Valentine y The Jesus and Mary Chain. On Welfare, con distribución en Estados Unidos, Reino Unido, Japón y Alemania, logró críticas positivas en medios. Además de aparecer en la rotación de estaciones de radio como WFMU de Nueva Jersey, KDVS de California y BBC Radio 6en Reino Unido.
+
 los_macuanos:
   name: Los Macuanos
   text: |
