--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node server",
-    "docs": "groc -o assets/docs --index assets/js/app.coffee assets/js/* routes/* ./*.coffee"
+    "docs": "groc -o assets/docs --index app.coffee assets/js/* routes/* ./*.coffee"
   },
   "engines": {
     "node": "0.8.x",
