--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "connect-assets": "~2.3.3",
     "underscore": "~1.3.3",
     "express-load": "~1.1.0"
+  },
+  "devDependencies": {
+    "groc": "~0.3.0"
   }
 }
